Thu Apr  4 15:10:50 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (generate_makefile): Derived file names from given
	input; don't assume Makefile.in and Makefile.am.
	(am_file_name, in_file_name): New globals.
	(read_am_file): Use them.

	* program.am (@PROGRAM@): Use transformed program name.

	* remake-hdr.am (stamp-h): Actually touch stamp-h.

Wed Apr  3 15:16:06 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (require_file_internal): Use correct file for error
	messages.  Test insh.test.

Mon Apr  1 09:47:44 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* texinfos.am (.texi.info): Build output file in srcdir.

	* automake.in (require_file_internal): If $dir is ".",then look in
	relative directory.
	(handle_texinfo): Canonicalize name of texi file before looking
	for dependency variable.

Thu Mar 28 08:33:21 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (require_conf_file_with_conf_line): Yet another
	function of this form.
	(libtool_line): New variable.
	(handle_libraries): Handle libtool.

	* libraries-vars.am: Removed.

	* automake.in (seen_libtool): New variable.
	(scan_configure): Look for gm_PROG_LIBTOOL or AC_PROG_LIBTOOL.

	* automake.in (handle_dist_worker): Handle dist-local.

	* Makefile.am (maintainer-check): Do "make check" after all syntax
	checks.

	* texi-version.am (stamp-@VTI@): Look for mdate-sh in appropriate
	directory.

	* automake.in ($seen_arg_prog): New global.
	(handle_programs): Error if AC_ARG_PROGRAM not seen.
	(handle_scripts): Ditto.
	(handle_configure): mkinstalldirs now a config file.
	(handle_installdirs): Find mkinstalldirs in config_aux_dir.
	(handle_dist_worker): Removed DIST_SUBDIRS.
	(require_file_path): New variable.
	(require_file_with_conf_line): Set it.
	(require_file_with_line): Ditto.
	(require_file): Ditto.
	(require_file_internal): Incorporated code from
	require_config_file.
	(require_config_file): Rewrote.
	(require_conf_file_with_line): New function.