@@ -768,12 +768,13 @@ sub handle_scripts
     # NOTE we no longer automatically clean SCRIPTS, because it is
     # useful to sometimes distribute scripts verbatim.  This happens
     # eg in Automake itself.
-    $scripts_installed = &am_install_var ('scripts', 'SCRIPTS',
-					  'bin', 'sbin', 'libexec', 'pkgdata',
-					  'noinst', 'check');
+    local ($msi);
+    $msi = &am_install_var ('scripts', 'SCRIPTS',
+			    'bin', 'sbin', 'libexec', 'pkgdata',
+			    'noinst', 'check');
 
     # We really only want a boolean value.
-    $scripts_installed = 1 if $scripts_installed;
+    $scripts_installed = 1 if $msi;
 
     if ($scripts_installed)
     {
