@@ -22,7 +22,10 @@ install-@DIR@SCRIPTS: $(@DIR@_SCRIPTS)
 	list="$(@DIR@_SCRIPTS)"; for p in $$list; do \
 	  if test -f $$p; then \
 	    $(INSTALL_SCRIPT) $$p $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
-	  else :; fi; \
+	  else if test -f $(srcdir)/$$p; then \
+	    $(INSTALL_SCRIPT) $(srcdir)/$$p \
+	      $(@DIR@dir)/`echo $$p|sed '$(transform)'`; \
+	  else :; fi; fi; \
 	done
 
 uninstall-@DIR@SCRIPTS:
