@@ -1,5 +1,11 @@
 Thu Apr  4 15:10:50 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
+	* automake.in (handle_scripts): Never allow scripts_installed to
+	become 0.
+
+	* scripts.am (install-@DIR@SCRIPTS): Scripts can be found in
+	srcdir.
+
 	* automake.in (generate_makefile): Derived file names from given
 	input; don't assume Makefile.in and Makefile.am.
 	(am_file_name, in_file_name): New globals.
